lijst toegevoegd en gestyled

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <title>Mijn eerste git projec</title>
 </head>
 <body>
+<h1>Wat een prachtige pagina</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, magnam quas. Ab aut consectetur debitis dignissimos
+    distinctio laboriosam veniam voluptatum?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error exercitationem inventore libero magnam
+    necessitatibus, perspiciatis placeat qui sequi totam voluptas!</p>
+<ul>
+    <li>item1</li>
+    <li>item2</li>
+    <li>item3</li>
+</ul>
 
 </body>
 </html>
